--- a/D_Light_Test1/Base.lproj/Main.storyboard
+++ b/D_Light_Test1/Base.lproj/Main.storyboard
@@ -5894,7 +5894,7 @@ it takes hours getting here! You now only have an hour to enjoy the beach.</stri
                                     <action selector="listenToVoiceOver:" destination="eXg-CJ-cf5" eventType="touchUpInside" id="mfJ-w1-emN"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cage1.png" translatesAutoresizingMaskIntoConstraints="NO" id="i0z-OU-Uqj">
+                            <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cage1.png" translatesAutoresizingMaskIntoConstraints="NO" id="i0z-OU-Uqj">
                                 <rect key="frame" x="158" y="342" width="344" height="295"/>
                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                     <rect key="frame" x="548" y="468" width="364" height="343"/>
@@ -7064,18 +7064,18 @@ it takes hours getting here! You now only have an hour to enjoy the beach.</stri
         <segue reference="730-eO-kLg"/>
         <segue reference="gtJ-gJ-dms"/>
         <segue reference="YVD-9f-fyu"/>
-        <segue reference="raE-9l-FqN"/>
         <segue reference="J6b-Uu-fG9"/>
         <segue reference="6GF-6v-d9i"/>
-        <segue reference="iWB-yu-uBZ"/>
-        <segue reference="q5m-AR-iHb"/>
-        <segue reference="KI8-gQ-xcA"/>
-        <segue reference="udh-kP-udg"/>
+        <segue reference="PdL-iG-df5"/>
         <segue reference="MPr-Bf-8n3"/>
         <segue reference="oeO-9L-x2D"/>
         <segue reference="S6r-9I-Rim"/>
+        <segue reference="wVv-zj-ql1"/>
+        <segue reference="udh-kP-udg"/>
+        <segue reference="RO5-1v-MuV"/>
         <segue reference="7Ul-wQ-XNy"/>
         <segue reference="Cha-hP-xda"/>
         <segue reference="caU-3v-9bs"/>
+        <segue reference="q5m-AR-iHb"/>
     </inferredMetricsTieBreakers>
 </document>
